<resources>

    <string name="default_text">--</string>
    <string name="app_name">gym4u</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="email_id">Email ID</string>

    <string name="title_activity_login_instructor">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_instructor_login">Sign in</string>
    <string name="title_activity_client__home">Client_Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_wall">Wall</string>
    <string name="user_avi">user-avi</string>
    <string name="UserName">First Lasr</string>
    <string name="title_activity_announcement">Announcement</string>
    <string name="title_activity_urgym">Urgym</string>
    <string name="KarClass1">Kids Class</string>
    <string name="KarClass2">Adults Class</string>
    <string name="KarClass3">Open Mat</string>
    <string name="KarClass4">Adult Morning Class</string>
    <string name="title_activity_urheart">Urheart</string>
    <string name="JuKids">MONDAY  5:30pm-6:25pm\n
WEDNESDAY  5:30pm-6:25pm\n
FRIDAY  5:30pm-6:25pm</string>
    <string name="JuAdults">	MONDAY  6:30pm-7:30pm\n
TUESDAY  7:30pm-8:30pm\n
WEDNESDAY  6:30pm-7:30pm\n
THURSDAY  7:30pm-8:30pm</string>
    <string name="JuOpen">FRIDAY  6:30pm-7:30pm\n
SATURDAY  10:30am-12:00pm</string>
    <string name="JuMorning">MONDAY  11:00am-12:00pm\n
TUESDAY  11:00am-12:00pm\n
WEDNESDAY  11:00am-12:00pm\n
THURSDAY  11:00am-12:00pm</string>
    <string name="KarateKidsClass">MONDAY  5:30pm-6:25pm\n
    WEDNESDAY  5:30pm-6:25pm\n
    FRIDAY  5:30pm-6:25pm\n
    </string>
    <string name="KarateAdult">MONDAY  6:30pm-7:30pm\n
TUESDAY  7:30pm-8:30pm\n
WEDNESDAY  6:30pm-7:30pm\n
THURSDAY  7:30pm-8:30pm</string>
    <string name="KarateOpen">FRIDAY  6:30pm-7:30pm\n
SATURDAY  10:30am-12:00pm</string>
    <string name="KarateMorning">MONDAY  11:00am-12:00pm\n
    TUESDAY  11:00am-12:00pm\n
    WEDNESDAY  11:00am-12:00pm\n
    THURSDAY  11:00am-12:00pm</string>
    <string name="GymHours">Monday–Thursday, 8 a.m.–9 p.m\n  Friday, 2 p.m.–9 p.m\n
Saturday, 9 a.m.–1 p.m.</string>
    <array name="client_type">
        <item>Client</item>
        <item>Instructor</item>
    </array>
    <array name="gyms">
        <item>Dynamic MMA</item>
        <item>Dragon Dojo</item>
        <item>Tiger MMA</item>
        <item>Lions Den</item>
    </array>
    <string name="title_activity_your_profile">Your_Profile</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    //joe is working here
    <string-array name="week">
        <item> Monday </item>
        <item> Tuesday </item>
        <item> Wednesday </item>
        <item> Thursday </item>
        <item> Friday </item>
        <item> Saturday </item>
        <item> Sunday </item>
    </string-array>

    <string-array name="dia">
        <item> M </item>
        <item> T </item>
        <item> W </item>
        <item> T </item>
        <item> F </item>
        <item> S </item>
        <item> S </item>
    </string-array>


</resources>
